# eat-review

./: .env.local.example  .eslintrc.json  .gitignore  CLAUDE.md  README.md  juno.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
public/: manifest.json
scripts/: generate-icons.js
src/app/: globals.css  layout.tsx  page.tsx  robots.txt
src/app/admin/: page.tsx
src/app/mypage/: page.tsx
src/app/restaurant/: page.tsx
src/app/setup/: client-page.tsx  page.tsx
src/components/: article.tsx  global-navbar.tsx  google-map.tsx  image-upload.tsx  location-search.tsx  login-button.tsx  navbar.tsx  restaurant-card.tsx  restaurant-detail.tsx  restaurant-form.tsx  review-item.tsx  star-rating.tsx  user-stats-dashboard.tsx
src/config/: auth.ts
src/contexts/: auth-context.tsx
src/satellite/: Cargo.toml
src/satellite/src/: lib.rs
src/serverless/: index.ts  update-stats.ts
src/services/: datastore.ts  image-datastore.service.ts  reputation.service.ts  review-vote.service.ts  review.service.ts  stats.service.ts  storage.service.ts  token.service.ts  user-stats.service.ts  user.service.ts  wallet.service.ts
src/types/: restaurant.ts  review.ts  user-reputation.ts  user.ts  wallet.ts
src/utils/: category-mapping.ts  demo-data.ts  init-collections.ts
