[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
junobuild-satellite = "0.1.0"
junobuild-macros = "0.1.0"
junobuild-utils = "0.1.0"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1"
num-traits = "0.2"

